--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -29,7 +29,7 @@
       <input type="hidden" name="_csrf" value="<%= csrfToken %>"> 
       <input type="text" name="nome" id="nome" class="form-control">
       <input type="text" name="sobrenome" id="sobrenome" class="form-control">
-      <input type="email" name="email" id="email">
+      <input type="text" name="email" id="email">
       <input type="password" name="password" id="passwordCreate" class="form-control">
       <button type="submit">Enviar</button>
     </form>
