--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,18 +4,20 @@
 <div class="test">
   <div class="container">
     <div class="row row-cols-2 row-cols-md-4 row-cols-lg-5 row-cols-xl-6">
-      <% infoBooks.forEach(element => { %>
-        <div class="col p-1 d-flex justify-content-center">
-          <div class="card">
-            <img src="<%= element.img %>" class="card-img-top" alt="..." style="height: 100%;">
-            <div class="card-body">
-              <h5 class="card-title" style="font-size: .8em;"><%= element.titulo %></h5>
-              <p class="card-text" style="font-size: .8em;"><%= element.avaliacao %></p>
-              <a href="/register/<%= element.id %>" class="btn btn-dark p-1" style="font-size: .7em;">Detalhes</a>
+      <% if (infoBooks.length > 0) { %>
+        <% infoBooks.forEach(element => { %>
+          <div class="col p-1 d-flex justify-content-center">
+            <div class="card">
+              <img src="<%= element.img %>" class="card-img-top" alt="..." style="height: 100%;">
+              <div class="card-body">
+                <h5 class="card-title" style="font-size: .8em;"><%= element.titulo %></h5>
+                <p class="card-text" style="font-size: .8em;"><%= element.avaliacao %></p>
+                <a href="/register/<%= element.id %>" class="btn btn-dark p-1" style="font-size: .7em;">Detalhes</a>
+              </div>
             </div>
           </div>
-        </div>
-      <% }) %>
+        <% }) %>
+      <% } %>
     </div>
   </div>
 </div>
