--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,6 +13,7 @@
                 <h5 class="card-title" style="font-size: .8em;"><%= element.titulo %></h5>
                 <p class="card-text" style="font-size: .8em;"><%= element.avaliacao %></p>
                 <a href="/register/<%= element.id %>" class="btn btn-dark p-1" style="font-size: .7em;">Detalhes</a>
+                <a href="/delete/<%= element.id %>" class="btn btn-dark p-1" style="font-size: .7em;">Apagar</a>
               </div>
             </div>
           </div>
